<resources>
    <string name="app_name">Smart Parking Solutions</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account"><u>Create new Account>></u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="or_login_with">Or Login with</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_to_existing_account"><u><![CDATA[<<Login to Existing Account]]></u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_sign_up_with">Or Sign Up with</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="send_email">Send Email</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="save_user_data">Save User Data</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="name">Name</string>
    <string name="availabe_balance">Availabe Balance</string>
    <string name="rs">Rs.</string>
    <string name="add_money">Add Money</string>
</resources>
