<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <include layout="@layout/appbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/container"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:id="@+id/profile_image"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:id="@+id/name_label"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:textColor="@android:color/black"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/name_label"
                android:background="@drawable/textview_background"
                android:padding="5dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:id="@+id/email_label"
                android:layout_below="@+id/name"
                android:layout_marginTop="5dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:textColor="@android:color/black"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/email_label"
                android:background="@drawable/textview_background"
                android:padding="5dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textColor="@android:color/black"
                android:id="@+id/dob_label"
                android:layout_below="@+id/email"
                android:layout_marginTop="5dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dob"
                android:textColor="@android:color/black"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/dob_label"
                android:background="@drawable/textview_background"
                android:padding="5dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textColor="@android:color/black"
                android:id="@+id/mobile_label"
                android:layout_below="@+id/dob"
                android:layout_marginTop="5dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobile"
                android:textColor="@android:color/black"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/mobile_label"
                android:background="@drawable/textview_background"
                android:padding="5dp"
                android:textSize="18sp"/>



        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_textView"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        android:layout_below="@+id/container"
        android:layout_centerHorizontal="true"
        android:textSize="21sp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout_btn"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:text="@string/logout"
        android:layout_centerInParent="true"
        android:layout_below="@+id/email_textView"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:background="@drawable/button_background"/>

</RelativeLayout>